# OpenHD

./: .clang-format  .csm_setup_0mYoCJ5UB  .drone.yml  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.adoc  CODE_OF_CONDUCT.asciidoc  Dockerfile-arm64-armbian-buster  Dockerfile-arm64-armbian-focal  Dockerfile-arm64-debian-buster  Dockerfile-arm64-ubuntu-bionic  Dockerfile-arm64-ubuntu-xenial  Dockerfile-armhf-raspbian-bullseye  Dockerfile-armhf-raspbian-buster  Dockerfile-armhf-raspbian-stretch  Dockerfile-pi-buster  Dockerfile-pi-stretch  Dockerfile-x86-ubuntu-bionic  Dockerfile_bpi  Dockerfile_rpi  README.adoc  README.asciidoc  README.md  Untitled Diagram.drawio  after-install.sh  after-install_x86.sh  before-install.sh  build_chroot.sh  build_docker.sh  cloning_with_submodules.md  desktop-truster.sh  install_build_dep.sh  install_dep legacy.sh  install_dep.sh  install_dep_jetson.sh  install_dep_legacy.sh  install_dep_rpi.sh  install_dep_ubuntu20.sh  install_dep_ubuntu22.sh  (+10 more)
OpenHD/: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  OS_INTERACTIONS.md  README.md  build_air_disabled.sh  build_cmake.sh  build_cmake_ninja.sh  build_debug_cmake.sh  build_install_cmake.sh  build_release_cmake.sh  build_submodules_independently.sh  build_submodules_independently_clean.sh  build_usb_cam_disabled.sh  main.cpp  run_clang_format.sh  run_clang_format2.sh  usefull_commands_for_debugging.txt
OpenHD/cmake/modules/: FindPoco.cmake
OpenHD/lib/: CMakeLists.txt  README.md  generate_custom_mavlink.sh
OpenHD/lib/mavlink/: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  config.h.in  mavgenerate.py  pc.in
OpenHD/lib/wifibroadcast/: .gitignore  CMakeLists.txt  Makefile  README.md  WBLib.cmake  version.py
OpenHD/ohd_common/: CMakeLists.txt  IExternalDeviceIp.h  README.md  copy_config_file.sh  del.txt  include_json.hpp  ohd_link.hpp  openhd-action-handler.hpp  openhd-camera.hpp  openhd-common-tests.hpp  openhd-dirty-fatal-error.hpp  openhd-dirty-irrecoverable-error.h  openhd-discoverable.hpp  openhd-ethernet.hpp  openhd-ethernet.hpp.txt  openhd-external-device.h  openhd-external-device.hpp  openhd-global-constants.h  openhd-global-constants.hpp  openhd-hardware.h  openhd-ignore-interfaces.h  openhd-led-codes.hpp  openhd-led-error-codes.h  openhd-led-pi.hpp  openhd-link-statistics.h  openhd-link-statistics.hpp  openhd-log.hpp  openhd-lte.hpp  openhd-platform-discover.hpp  openhd-platform.hpp  openhd-profile-json.hpp  openhd-profile.hpp  openhd-read-util.hpp  openhd-rpi-gpio.h  openhd-rpi-os-configure-vendor-cam.h  openhd-rpi-os-configure-vendor-cam.hpp  openhd-settings-directories.hpp  openhd-settings-persistent.hpp  openhd-settings.hpp  openhd-settings2.hpp  (+17 more)
OpenHD/ohd_common/config/: config.config  dev_hardware.config  hardware.config
OpenHD/ohd_common/inc/: config.h  config_paths.h  include_json.hpp  ohd_link.hpp  openhd-action-handler.hpp  openhd-dirty-fatal-error.hpp  openhd-external-device.hpp  openhd-led-pi.hpp  openhd-platform-json.hpp  openhd-profile.hpp  openhd-rpi-gpio.hpp  openhd-settings-directories.hpp  openhd-settings-imp.hpp  openhd-settings-persistent.hpp  openhd-temporary-air-or-ground.h  openhd-udp-log.h  openhd-util-filesystem.hpp  openhd-util.hpp  openhd_action_handler.h  openhd_action_handler.hpp  openhd_bitrate.h  openhd_bitrate_conversions.hpp  openhd_buttons.h  openhd_common_tests.hpp  openhd_config.h  openhd_dirty_fatal_error.hpp  openhd_dynamic_cameras.hpp  openhd_external_device.h  openhd_external_device.hpp  openhd_global.h  openhd_global_constants.hpp  openhd_led.h  openhd_led_codes.hpp  openhd_led_pi.hpp  openhd_link.hpp  openhd_link_statistics.hpp  openhd_platform.h  openhd_platform.hpp  openhd_platform_discover.hpp  openhd_platform_json.hpp  (+27 more)
OpenHD/ohd_common/mavlink_settings/: ISettingsComponent.h  ISettingsComponent.hpp  MSettingsComponent.hpp  XSettingsComponent.h
OpenHD/ohd_common/src/: config.cpp  config_paths.cpp  openhd_action_handler.cpp  openhd_bitrate.cpp  openhd_buttons.cpp  openhd_config.cpp  openhd_external_device.cpp  openhd_global.cpp  openhd_led.cpp  openhd_platform.cpp  openhd_profile.cpp  openhd_reboot_util.cpp  openhd_settings_directories.cpp  openhd_settings_imp.cpp  openhd_settings_persistent.cpp  openhd_spdlog.cpp  openhd_tcp.cpp  openhd_thermal.cpp  openhd_udp.cpp  openhd_udp_log.cpp  openhd_util.cpp  openhd_util_async.cpp  openhd_util_filesystem.cpp  openhd_util_time.cpp
OpenHD/ohd_common/test/: test_config.cpp  test_led.cpp  test_logging.cpp  test_ohd_reboot.cpp  test_openhd_async.cpp  test_openhd_util.cpp  test_tcp_server.cpp
OpenHD/ohd_discovery/: .gitignore  CMakeLists.txt  README.md
OpenHD/ohd_discovery/cmake/: FindV4L2.cmake
OpenHD/ohd_discovery/inc/: DCameras.h  DCamerasHelper.hpp  DEthernetCards.h.txt  DPlatform.h  DProfile.h  DThermalCamerasHelper.hpp  DV4l2DevicesHelper.h  DV4l2DevicesHelper.hpp  DWifiCards.h  OHDDiscovery.h  OHDSystem.h
OpenHD/ohd_discovery/lib/: nl.c
OpenHD/ohd_discovery/src/: DCameras.cpp  DEthernetCards.cpp  DPlatform.cpp  (+4 more)
OpenHD/ohd_interface/: .gitignore  CMakeLists.txt  README.md
OpenHD/ohd_system/: CMakeLists.txt  README.md
OpenHD/ohd_telemetry/: .gitignore  CMakeLists.txt  README.md  build_cmake.sh  openhd_telemetry@.service
OpenHD/ohd_video/: .gitignore  CMakeLists.txt  README.md
OpenHD/scripts/: README.md  dhcpevent_thread.sh  dnsmasqWifi.conf  ethernet_hotspot.sh  wifi_hotspot.sh
OpenHD/templates/: README.md  wificard.template
openhd-system/: .gitignore  CMakeLists.txt  Makefile  README.md  openhd_system.service
openhd-system/inc/: cameras.h  constants.h  ethernet.h  nl.h  platform.h  profile.h  wifi.h
openhd-system/lib/: bcm2835.c
openhd-system/src/: cameras.cpp  ethernet.cpp  main.cpp  platform.cpp  profile.cpp  wifi.cpp
openhd-telemetry2/: .gitignore  CMakeLists.txt  build_cmake.sh
openhd-telemetry2/src/: GroundTelemetry.h  mav_helper.h
openhd-telemetry2/tests/: test_generate_log_message.cpp  test_serial_endpoint.cpp
wifibroadcast-splash/: CMakeLists.txt  Makefile  README.md  main.c
(+2048 files in other folders)
